refactor and ui fixes